fix overlap of move buttons for tile

--- a/app/assets/stylesheets/internal/screen_desktop.css.scss
+++ b/app/assets/stylesheets/internal/screen_desktop.css.scss
@@ -80,6 +80,9 @@ body {
     position:relative;
     max-width:46em;
     width:100%;
+    #slideshow {
+      padding-top: 0rem;
+    }
     a#prev, a#next {
       color:darken($tile-wall-bg, 3%);
       background:darken($tile-wall-bg, 3%);
