--- a/app/assets/stylesheets/internal/tiles.css.scss
+++ b/app/assets/stylesheets/internal/tiles.css.scss
@@ -67,7 +67,10 @@
   }
 
   // Tile itself
-  #slideshow {width:100%;}
+  #slideshow {
+    width:100%; 
+    padding-top: 2rem;
+  }
   .viewer {
     margin:auto;
     text-align: center;
